# oceanbase-diagnostic-tool

./: .gitignore  Makefile  config.py  dev_helper.sh  diag_cmd.py  pyproject.toml
.github/workflows/: build_package.yml  build_rpm.yml  quality_gate.yml
common/: config_helper.py
common/ssh_client/: base.py  remote_client.py
conf/: agent.yml.example  ai.yml.example  inner_config.yml
docs/: AGENT_DESIGN.md  BUILTIN_COMPLETION_PROPOSAL.md  COMPLETION_IMPLEMENTATION.md  COMPLETION_IMPROVEMENT_PROPOSAL.md  GATHER_COMPONENT_LOG_REUSE_ANALYSIS.md  OPTIMIZATION_START.md  ROADMAP_3MONTHS.md  RPM_DESIGN_REVIEW.md  TECH_DEBT.md  WHY_BASH_SCRIPT_NEEDED.md  ai_assistant_improvement.md
handler/analyzer/: analyze_log.py
handler/checker/: check_handler.py  check_task.py
handler/checker/step/: eval.py
handler/gather/: gather_log.py
handler/rca/: rca_handler.py
macos/: install.sh  test_local_install.sh
plugins/rca/: clog_disk_full.py  ddl_disk_full.py  delete_server_error.py  disconnection.py  index_ddl_error.py  lock_conflict.py  log_error.py  major_hold.py  memory_full.py  memstore_full.py  oms_full_trans.py  replay.py  replay_hold.py  suspend_transaction.py  tenant_memory_throttling.py  transaction_disconnection.py  transaction_execute_timeout.py  transaction_not_ending.py  transaction_other_error.py  transaction_rollback.py  transaction_wait_timeout.py  unit_gc.py
rpm/: init.sh  init_obdiag_cmd.sh  oceanbase-diagnostic-tool.spec
src/: main.py
src/common/: base_handler.py  command.py  command_registry.py  config.py  config_accessor.py  config_helper.py  config_schema.py  constant.py  context_manager.py  core.py  diag_cmd.py  error_codes.py  error_handler.py  exceptions.py  handler_factory.py  log_config.py  ob_connection_pool.py  ob_connector.py  obdiag_home_refactored.py  output_formatter.py  paths.py  progress.py  result_type.py  ssh.py  ssh_connection_manager.py  ssh_connection_pool.py  stdio.py  tool.py  version.py
src/common/ssh_client/: remote_client.py
src/common/utils/: __init__.py  config_options_parser.py  config_util.py  directory_util.py  file_util.py  net_utils.py  string_utils.py  time_utils.py  yaml_utils.py
src/handler/: example_handler.py
src/handler/agent/: __init__.py  handler.py  models.py
src/handler/ai/: ai_assistant_handler.py  handler_invoker.py  mcp_client.py  mcp_server.py  obdiag_agent_integration.py  openai_client.py
src/handler/analyzer/: analyze_flt_trace.py  analyze_index_space.py  analyze_log.py  analyze_memory.py  analyze_parameter.py  analyze_queue.py  analyze_sql.py  analyze_sql_review.py  analyze_variable.py
src/telemetry/: telemetry.py
test/common/: test_base_handler.py  test_command.py  test_config_schema.py  test_ob_connection_pool.py  test_output_formatter.py
ubuntu/: build_ubuntu.sh
workflow_data/: check_py_files.py  run_obdiag_test.sh
(+170 files in other folders)
